--- a/contactus.html
+++ b/contactus.html
@@ -96,7 +96,7 @@ Please note, at this time we are only providing coaching online as per governmen
         <a href="https://twitter.com" class="fab fa-twitter"></a>
         <a href="https://facebook.com" class="fab fa-facebook-f"></a>
         <a href="https://www.linkedin.com/in/ali-reardon-5134759/" class="fab fa-linkedin"></a>
-        <a href="tel:07530 202876"><i class="fas fa-phone"></i></a>
+        <a href="tel:07530202876"><i class="fas fa-phone"></i></a>
     </div> 
         <p class ="footer-text-style">
           <br>Here at Coaching Psychology Ltd, we take your privacy very seriously and will only use the information you provide here to provide the services or information you have requested.
@@ -112,7 +112,9 @@ Please note, at this time we are only providing coaching online as per governmen
       </div>
     </div>
   </div>
+</footer>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
+</html>
