--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	   <div class="col">
 	        <h2>Resilience Coaching</h2>
         <p>Coaching through the Covid crisis</p>
-        <a href="services.html#resilience"><img src="images/Resilience medium.jpg" class="img-rounded" alt="resilience" width="304" height="236">
+        <a href="services.html#resilience"><img src="images/Resiliencemedium.jpg" class="img-rounded" alt="resilience" width="304" height="236">
         </a></div>
     </div>
 </div>
@@ -97,7 +97,8 @@
       </div>
     </div>
   </div>
+</footer>
    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
+</body></html>
