--- a/contactus.html
+++ b/contactus.html
@@ -79,7 +79,7 @@
 Please note, at this time we are only providing coaching online as per government guidelines.  </p>
 <h4 class ="contact-style-h4">Contact us:</h4>
 <p class ="contact-style-p">Mail: ali.reardon@coaching-psychology.co.uk
-<br>Phone: 07974 019318</p>
+<br>Phone: 07974019318</p>
 
 <img src="images/groupsmall.jpg" class="rounded" alt="executive coaching" width="400" height="236" class="img-fluid">
 
@@ -96,7 +96,7 @@ Please note, at this time we are only providing coaching online as per governmen
         <a href="https://twitter.com" class="fab fa-twitter"></a>
         <a href="https://facebook.com" class="fab fa-facebook-f"></a>
         <a href="https://www.linkedin.com/in/ali-reardon-5134759/" class="fab fa-linkedin"></a>
-        <a href="tel:07530202876"><i class="fas fa-phone"></i></a>
+        <a href="tel:012345690"><i class="fas fa-phone"></i></a>
     </div> 
         <p class ="footer-text-style">
           <br>Here at Coaching Psychology Ltd, we take your privacy very seriously and will only use the information you provide here to provide the services or information you have requested.
