--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         <div class="row">
             <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
        <div class="social-media-icons">
-        <a href="https://twitter.com" class="fab fa-twitter"></a>
-        <a href="https://facebook.com" class="fab fa-facebook-f"></a>
-        <a href="https://www.linkedin.com/in/ali-reardon-5134759/" class="fab fa-linkedin"></a>
+        <a href="https://twitter.com" class="fab fa-twitter" target="_blank"></a>
+        <a href="https://facebook.com" class="fab fa-facebook-f" target="_blank"></a>
+        <a href="https://www.linkedin.com/in/ali-reardon-5134759/" class="fab fa-linkedin" target="_blank"></a>
         <a href="tel:012345690"><i class="fas fa-phone"></i></a>
     </div> 
         <p class ="footer-text-style">
