--- a/contactus.html
+++ b/contactus.html
@@ -40,52 +40,37 @@
 
    <!--Contact Form -->
 
-
-
-<div class="container mt-5">
-    <p>We would love to hear from you to discuss how Coaching Psychology Ltd could help your organisation.  </p><p>Get in touch and we'll be back to you shortly. </p>
-    <!-- This row has two columns for home page image and main elevator text -->
-    <div class="row pt-2">
-        <div class="col">
-    <div class="form-group">
-    <form action="#">
-    <label for="fname"><h4>First name</h4></label>
-		<input name="firstname" type="text" "required" class="form-control" id="fname"/>
-    </div>
-    <div class="form-group">
-	<label for="lastname"><h4>Last name</h4></label>
-	<input name="lastname" type="text" class="form-control" id="lname"/>
-    </div>
-<div class="form-group">
-	<label for="Email"><h4>Email address</h4></label>
-	<input name="email" type="email" class="form-control" id="email" />
-</div>
-<div class="form-group">
-	<label for="Email"><h4>Phone number</h4></label>
-	<input name="phone" type="text" class="form-control" id="phone" />
-</div>
-<div class="form-group">
-    <label for="message"><h4>Send us your message</h4></label> <textarea class="form-control" 
-              name="message" form="contactform" id="message" rows="5"></textarea>
-<br>
-<button type ="submit" class="btn-success btn-lg">Send message</button>                
-</form>
-</div>
-        </div>
-<div class="col">                      
-<h4 class ="contact-style-h4">Location</h4>
-<p class ="contact-style-p">We are located in the South-East of England, but can cover most parts of the UK.  We are also able to offer remote coaching by Zoom, MS-Teams or Facetime in any location. 
+   <div class="container">
+    <h5>Get in Touch</h5>
+    <form id="book-form">
+      <div>
+        <label for="title">Title</label>
+        <input type="text" id="title" class="u-full-width">
+      </div>
+      <div>
+        <label for="author">Author</label>
+        <input type="text" id="author" class="u-full-width">
+      </div>
+      <div>
+        <label for="isbn">ISBN#</label>
+        <input type="text" id="isbn" class="u-full-width">
+      </div>
+      <div>
+        <input type="submit" value="Submit" class="u-full-width">
+      </div>
+    </form>
+<h4>Location</h4>
+<p>We are located in the South-East of England, but can cover most parts of the UK.  We are also able to offer remote coaching by Zoom, MS-Teams or Facetime in any location. 
 
 Please note, at this time we are only providing coaching online as per government guidelines.  </p>
-<h4 class ="contact-style-h4">Contact us:</h4>
-<p class ="contact-style-p">Mail: ali.reardon@coaching-psychology.co.uk
+<h4>Contact us:</h4>
+<p>Mail: ali.reardon@coaching-psychology.co.uk
 <br>Phone: 07974019318</p>
 
 <img src="images/groupsmall.jpg" class="rounded" alt="executive coaching" width="400" height="236" class="img-fluid">
 
-</div>
-        </div>
   <!-- Footer section -->
+ 
 
 
 <footer class="bg-light text-center">
