--- a/contactus.html
+++ b/contactus.html
@@ -39,26 +39,30 @@
 </nav>
 
    <!--Contact Form -->
+   <div class="container-fluid">
+    <h4>Get in Touch</h4>
+    <p>We would love to hear from you to discuss how Coaching Psychology Ltd could help your organisation.  Get in touch and we'll be back to you shortly</p> 
+  <br> 
+    <form>
+    <div class="form-group">
+      <label for="firstname">First Name</label>
+      <input type="text" class="form-control" id="firstname">
+    </div>
+    <div class="form-group">
+      <label for="lastname">Last Name</label>
+      <input type="text" class="form-control" id="lastname">
+    </div>
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="email" class="form-control" id="email">
+    </div>
+    <div class="form-group">
+      <label for="message">Your message</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+    </div>
+  </form>
+   
 
-   <div class="container">
-    <h5>Get in Touch</h5>
-    <form id="book-form">
-      <div>
-        <label for="title">Title</label>
-        <input type="text" id="title" class="u-full-width">
-      </div>
-      <div>
-        <label for="author">Author</label>
-        <input type="text" id="author" class="u-full-width">
-      </div>
-      <div>
-        <label for="isbn">ISBN#</label>
-        <input type="text" id="isbn" class="u-full-width">
-      </div>
-      <div>
-        <input type="submit" value="Submit" class="u-full-width">
-      </div>
-    </form>
 <h4>Location</h4>
 <p>We are located in the South-East of England, but can cover most parts of the UK.  We are also able to offer remote coaching by Zoom, MS-Teams or Facetime in any location. 
 
@@ -68,7 +72,7 @@ Please note, at this time we are only providing coaching online as per governmen
 <br>Phone: 07974019318</p>
 
 <img src="images/groupsmall.jpg" class="rounded" alt="executive coaching" width="400" height="236" class="img-fluid">
-
+</div>
   <!-- Footer section -->
  
 
