Updates to the contact us section to pass validation.  I refactored the form

--- a/contactus.html
+++ b/contactus.html
@@ -40,10 +40,11 @@
 
    <!--Contact Form -->
    <div class="container-fluid">
-    <h4>Get in Touch</h4>
+    <h2>Get in Touch</h2>
     <p>We would love to hear from you to discuss how Coaching Psychology Ltd could help your organisation.  Get in touch and we'll be back to you shortly</p> 
-  <br> 
-    <form>
+<div class="row mt-5 mb-5">    
+  <div class="col-lg-6 col-md-12">
+  <form>
     <div class="form-group">
       <label for="firstname">First Name</label>
       <input type="text" class="form-control" id="firstname">
@@ -60,19 +61,22 @@
       <label for="message">Your message</label>
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
     </div>
+    <button type = "button" id="submit" class="btn btn-success">Send Message</button>
   </form>
-   
-
-<h4>Location</h4>
+  </div>
+  <div class="col">
+<h2>Location</h2>
 <p>We are located in the South-East of England, but can cover most parts of the UK.  We are also able to offer remote coaching by Zoom, MS-Teams or Facetime in any location. 
 
 Please note, at this time we are only providing coaching online as per government guidelines.  </p>
-<h4>Contact us:</h4>
-<p>Mail: ali.reardon@coaching-psychology.co.uk
-<br>Phone: 07974019318</p>
+<h2>Contact us:</h2>
+<p>Mail: ali.reardon@test.co.uk
+<br>Phone: 0123456788</p>
 
 <img src="images/groupsmall.jpg" class="rounded" alt="executive coaching" width="400" height="236" class="img-fluid">
 </div>
+   </div>
+   </div>
   <!-- Footer section -->
  
 
