Update to about me page following validation check

--- a/contactus.html
+++ b/contactus.html
@@ -73,7 +73,7 @@ Please note, at this time we are only providing coaching online as per governmen
 <p>Mail: ali.reardon@test.co.uk
 <br>Phone: 0123456788</p>
 
-<img src="images/groupsmall.jpg" class="rounded" alt="executive coaching" width="400" height="236" class="img-fluid">
+<img src="images/groupsmall.jpg" class="rounded" alt="executive coaching" width="400" height="236">
 </div>
    </div>
    </div>
