--- a/aboutme.html
+++ b/aboutme.html
@@ -38,15 +38,14 @@
 </div>
 </nav>
 
-<div class="container-fluid text-center">
+<div class="container-fluid text-left">
     <!-- This row has two columns for home page image and main elevator text -->
-    <div class="row mt-4">
-        <div class="col-lg-6 col-md-12">
-            <img src="images/Alisonreardon.jpg" class="img-fluid" alt="Alison Reardon Head Coach " class="img-rounded" alt="Alison Reardon, Executive Coach" width="100%" height="600px">
+    <div class="row">
+        <div class="col-4">
+            <img src="images/Alisonreardon.jpg" class="img-fluid img-rounded" alt="Alison Reardon, Executive Coach" height="600px" width = 100%>
         </div>
-        <div class="col pt-5">
-            <h3>Ali Reardon, Head Coach</h3>
-
+        <div class="col-8"> 
+            <h2>Ali Reardon, Head Coach</h2>
         <p>
         A highly qualified executive coach, with tools, techniques and proven theory behind her methods - she is a Chartered Occupational Psychologist,  holds the Diploma in Coaching Psychology from Middlesex University, training in coaching supervision (Bath Consultancy) and is accredited as a Master Executive Coach by the Association of Coaching. </p>
         <p>
@@ -55,8 +54,10 @@
         <p>Experienced in business - she has 25+ years in consultancy and has held leadership and management positions in this time. </p>
         <p>Expert in psychometrics  - including MBTI, OPQ/MQ, Hogan Suite, TMP, LEA 360, Strengthscope </p>
 
-        <h5>Coaching style</h5>
-        <p class ="italic"> “My aim is to help you feel some immediate support with your challenges or development areas. To help you develop a toolkit of practical strategies, but also just to give you space to think and work things through. My coaching is a combination of very practical activity (exercises, tools, working through scenarios, planning) and deeper discussions. You can expect to know yourself better and be feeling and doing things differently by the end of the sessions.” </p>
+        <h2>Coaching style</h2>
+        <p class ="italic"> “My aim is to help you feel some immediate support with your challenges or development areas. 
+          To help you develop a toolkit of practical strategies, but also just to give you space to think and work things through.</p> 
+          <p>My coaching is a combination of very practical activity (exercises, tools, working through scenarios, planning) and deeper discussions. You can expect to know yourself better and be feeling and doing things differently by the end of the sessions.” </p>
         <br>
         <a href="/documents/AliReardoncoachingBio2021.pdf" target="_blank"><i class="cv-download" aria-hidden ="true"></i><span>Download Ali's Profile</span></a>
         </div>
