--- a/contactus.html
+++ b/contactus.html
@@ -59,7 +59,7 @@
     </div>
     <div class="form-group">
       <label for="message">Your message</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+      <textarea class="form-control" rows="5" id = "message"></textarea>
     </div>
     <button type = "button" id="submit" class="btn btn-success">Send Message</button>
   </form>
