--- a/contactus.html
+++ b/contactus.html
@@ -82,28 +82,25 @@ Please note, at this time we are only providing coaching online as per governmen
 
 
            <footer class="bg-light text-center">
-            <div class="p-4">
-                <div class="row">
-                    <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-               <div class="social-media-icons">
-                <a href="https://twitter.com" class="fab fa-twitter" target="_blank"></a>
-                <a href="https://facebook.com" class="fab fa-facebook-f" target="_blank"></a>
-                <a href="https://www.linkedin.com/in/ali-reardon-5134759/" class="fab fa-linkedin" target="_blank"></a>
-                <a href="tel:012345690"><i class="fas fa-phone"></i></a>
-            </div> 
-                <p class ="footer-text-style">
-                  <br>Here at Coaching Psychology Ltd, we take your privacy very seriously and will only use the information you provide here to provide the services or information you have requested.
-                </p>
-            <!-- credit to https://hollypryce.com/social-media-icons/ for helping with this -->
-            
+            <div class="p-4 row">
+              <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                <div class="social-media-icons">
+                    <a href="https://twitter.com" class="fab fa-twitter" target="_blank"></a>
+                    <a href="https://facebook.com" class="fab fa-facebook-f" target="_blank"></a>
+                    <a href="https://www.linkedin.com/in/ali-reardon-5134759/" class="fab fa-linkedin" target="_blank"></a>
+                    <a href="tel:012345690"><i class="fas fa-phone"></i></a>
+                </div> 
+              <p class ="footer-text-style">
+                <br>Here at Coaching Psychology Ltd, we take your privacy very seriously and will only use the information you provide here to provide the services or information you have requested.
+              </p>
               </div>
-                <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-                <span id ="footer-logos">
-                <img src="images/AccreditedMastExeCoach12+(002)-110w.webp" class="img-rounded" alt="resilience" width="80" height="80">
-                <img src="images/BritishPsylogo.jpg" class="img-rounded" alt="british psychology logo" width="80" height="80">
-                </span>
+              
+              <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                  <span id ="footer-logos">
+                  <img src="images/AccreditedMastExeCoach12+(002)-110w.webp" class="img-rounded" alt="resilience" width="80" height="80">
+                  <img src="images/BritishPsylogo.jpg" class="img-rounded" alt="british psychology logo" width="80" height="80">
+                  </span>
               </div>
-            </div>
           </div>
         </footer>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
