--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
             <img src="images/coachingsmall.jpg" class="rounded" alt="executive coaching">
         </div>
         <div class="col text-services-section">
-            <h3 id="executive-coaching">Executive Coaching</h3>
+            <h2 id="executive-coaching">Executive Coaching</h2>
                 <h5>One-to-one coaching</h5>
                     <p>Programmes are typically 6-12 months which cover Executive Coaching for individuals to help manage 
                     personal changes (e.g. confidence, impact, influencing, conflict) or a specific role or situation (e.g. on-boarding, business growth, return from maternity, succession planning, feeling overwhelmed with work)</p>
@@ -58,7 +58,7 @@
             <img src="images/groupsmall.jpg" class="rounded" alt="group programme">
         </div>
         <div class="col text-services-section">
-            <h3 id="group-programme">Group Programmes</h3>
+            <h2 id="group-programme">Group Programmes</h2>
                 <h5>Team Coaching</h5>
                     <p>The coach works with an intact team to support them in many possible ways – e.g. clarifying priorities, understanding & developing the team dynamic, managing conflict, maximising the contribution of each member, improving communications, enhancing innovation etc.
                 <h5>Action Learning</h5>
@@ -70,7 +70,7 @@
             <img src="images/Resilience small.jpg" class="rounded" alt="group coaching">
         </div>
         <div class="col text-services-section">
-            <h3 id="resilience">Resilience Coaching </h3>
+            <h2 id="resilience">Resilience Coaching </h2>
                 <p>Supporting people at work through the COVID crisis
                 A bespoke offer of single session coaching, providing thinking space, psychological support and practical strategies to help people at work manage the unique challenges of the Covid crisis
                 </p>
@@ -86,28 +86,25 @@
 
 
            <footer class="bg-light text-center">
-            <div class="p-4">
-                <div class="row">
-                    <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-               <div class="social-media-icons">
-                <a href="https://twitter.com" class="fab fa-twitter" target="_blank"></a>
-                <a href="https://facebook.com" class="fab fa-facebook-f" target="_blank"></a>
-                <a href="https://www.linkedin.com/in/ali-reardon-5134759/" class="fab fa-linkedin" target="_blank"></a>
-                <a href="tel:012345690"><i class="fas fa-phone"></i></a>
-            </div> 
-                <p class ="footer-text-style">
-                  <br>Here at Coaching Psychology Ltd, we take your privacy very seriously and will only use the information you provide here to provide the services or information you have requested.
-                </p>
-            <!-- credit to https://hollypryce.com/social-media-icons/ for helping with this -->
-            
+            <div class="p-4 row">
+              <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                <div class="social-media-icons">
+                    <a href="https://twitter.com" class="fab fa-twitter" target="_blank"></a>
+                    <a href="https://facebook.com" class="fab fa-facebook-f" target="_blank"></a>
+                    <a href="https://www.linkedin.com/in/ali-reardon-5134759/" class="fab fa-linkedin" target="_blank"></a>
+                    <a href="tel:012345690"><i class="fas fa-phone"></i></a>
+                </div> 
+              <p class ="footer-text-style">
+                <br>Here at Coaching Psychology Ltd, we take your privacy very seriously and will only use the information you provide here to provide the services or information you have requested.
+              </p>
               </div>
-                <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-                <span id ="footer-logos">
-                <img src="images/AccreditedMastExeCoach12+(002)-110w.webp" class="img-rounded" alt="resilience" width="80" height="80">
-                <img src="images/BritishPsylogo.jpg" class="img-rounded" alt="british psychology logo" width="80" height="80">
-                </span>
+              
+              <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                  <span id ="footer-logos">
+                  <img src="images/AccreditedMastExeCoach12+(002)-110w.webp" class="img-rounded" alt="resilience" width="80" height="80">
+                  <img src="images/BritishPsylogo.jpg" class="img-rounded" alt="british psychology logo" width="80" height="80">
+                  </span>
               </div>
-            </div>
           </div>
         </footer>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
