--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </nav>
 
  <!--this section contains the hero image and an elevator pitch-->
-            <div class="container-fluid hero-home">
+            <div class="container-fluid hero-home img-fluid">
                  <div class ="row">
                     <div class="col-md-8 col-lg-6 offset-md-4 offset-lg-6">
                           <p class ="home-spacing"> We draw on business experience and psychological expertise to deliver powerful executive coaching programmes </p>
