updates to styling, for contact and about me page to make the site cleaner

--- a/aboutme.html
+++ b/aboutme.html
@@ -41,8 +41,8 @@
 <div class="container-fluid">
     <!-- This row has two columns for home page image and main elevator text -->
     <div class="row">
-        <div class="col-4">
-            <img src="images/Alisonreardon.jpg" class="img-fluid img-rounded" alt="Alison Reardon, Executive Coach">
+        <div class="col-4 about-me">
+            <img src="images/Alisonreardon.jpg" class="img-fluid img-rounded" width = "100%" alt="Alison Reardon, Executive Coach">
         </div>
         <div class="col-8"> 
             <h2>Ali Reardon, Head Coach</h2>
