--- a/contactus.html
+++ b/contactus.html
@@ -39,11 +39,12 @@
 </nav>
 
    <!--Contact Form -->
-   <div class="container-fluid">
+<div class="container-fluid">
+  <div class="row mt-1 mb-1">    
+  <div class="col-lg-6 col-md-12 contactus">
     <h2>Get in Touch</h2>
     <p>We would love to hear from you to discuss how Coaching Psychology Ltd could help your organisation.  Get in touch and we'll be back to you shortly</p> 
-<div class="row mt-5 mb-5">    
-  <div class="col-lg-6 col-md-12">
+
   <form>
     <div class="form-group">
       <label for="firstname">First Name</label>
@@ -64,8 +65,8 @@
     <button type = "button" id="submit" class="btn btn-success">Send Message</button>
   </form>
   </div>
-  <div class="col">
-<h2>Location</h2>
+  <div class="col contactus">
+  <h2>Location</h2>
 <p>We are located in the South-East of England, but can cover most parts of the UK.  We are also able to offer remote coaching by Zoom, MS-Teams or Facetime in any location. 
 
 Please note, at this time we are only providing coaching online as per government guidelines.  </p>
