--- a/index.html
+++ b/index.html
@@ -48,24 +48,24 @@
             </div>
 
 <!-- Container for 1 section: Home service section-->
-<div class="container text-center">
-   
+<div class="container-fluid text-center home-page-services">
+  
     <!-- This row has three columns for the services sectons of the home-page --> 
     <div class="row mt-4 mb-4">
         <div class="col">
             <h2>1:1 Executive Coaching</h2>
          <p>Medium to long term programmes</p>
-         <a href="services.html#executive-coaching"><img src="images/coachingmedium.jpg" class="img-rounded img-fluid" alt="executive coaching" width="304" height="236">
+         <a href="services.html#executive-coaching"><img src="images/coachingmedium.jpg" class="img-rounded img-fluid" alt="executive coaching">
         </a></div>
         <div class="col">
 	        <h2>Group Programmes</h2>
          <p>Team coaching and action-learning </p>
-         <a href="services.html#group-programme"><img src="images/groupmedium.jpg" class="img-rounded img-fluid" alt="group coaching" width="304" height="236">
+         <a href="services.html#group-programme"><img src="images/groupmedium.jpg" class="img-rounded img-fluid" alt="group coaching">
         </a></div>
 	   <div class="col">
 	        <h2>Resilience Coaching</h2>
         <p>Coaching through the Covid crisis</p>
-        <a href="services.html#resilience"><img src="images/Resiliencemedium.jpg" class="img-rounded img-fluid" alt="resilience" width="304" height="236">
+        <a href="services.html#resilience"><img src="images/Resiliencemedium.jpg" class="img-rounded img-fluid" alt="resilience">
         </a></div>
     </div>
 </div>
