further tweaks to the to remove classes.  recreate containers for services page

--- a/aboutme.html
+++ b/aboutme.html
@@ -41,7 +41,7 @@
 <div class="container-fluid">
     <!-- This row has two columns for home page image and main elevator text -->
     <div class="row">
-        <div class="col-4 about-me">
+        <div class="col-sm-4 about-me">
             <img src="images/Alisonreardon.jpg" class="img-fluid img-rounded" width = "100%" alt="Alison Reardon, Executive Coach">
         </div>
         <div class="col-8"> 
