--- a/services.html
+++ b/services.html
@@ -59,15 +59,15 @@
 
     <!-- Service page with 2 columns and 3 rows -->
     <div class="container-fluid">
-      <div class="row mt-5 mb-5">
-        <div class="col-lg-6 col-md-12">
+      <div class="row p-2">
+        <div class="col-sm-6 col-md-6">
           <img
             src="images/coachingsmall.jpg"
             class="rounded img-fluid"
             alt="executive coaching"
           />
         </div>
-        <div class="col">
+        <div class="col-sm-6 col-md-6">
           <h2 id="executive-coaching">Executive Coaching</h2>
           <h5>One-to-one coaching</h5>
           <p>
@@ -86,16 +86,18 @@
       </div>
       </div>
     </div>
-      <div class="row mt-5 mb-5">
-        <div class="col-lg-6 col-md-12">
+      <div class="row p-2">
+        <div class="col-sm-6 col-md-6"">
+        
           <img
             src="images/groupsmall.jpg"
             class="rounded img-fluid"
             alt="group programme"
           />
         </div>
-        <div class="col">
+        <div class="col-sm-6 col-md-6">
           <h2>Group Programmes</h2>
+          
           <h5>Team Coaching</h5>
           <p>
             The coach works with an intact team to support them in many
@@ -111,15 +113,15 @@
             take action which they learn from.
           </p>
         </div></div>
-        <div class="row mt-5 mb-5">
-          <div class="col-lg-6 col-md-12">
+        <div class="row p-2">
+          <div class="col-sm-6 col-md-6">
             <img
               src="images/Resiliencesmall.jpg"
               class="rounded img-fluid"
               alt="group coaching"
             />
           </div>
-          <div class="col">
+          <div class="col-sm-6 col-md-6">
             <h2>Resilience Coaching</h2>
             <p>
               Supporting people at work through the COVID crisis A bespoke
