remove footer shading bg-light

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
            <!-- Footer section -->
 
 
-<footer class="bg-light text-center">
+<footer class="text-center">
   <div class="p-4 row">
     <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
       <div class="social-media-icons">
