--- a/aboutme.html
+++ b/aboutme.html
@@ -42,7 +42,7 @@
     <!-- This row has two columns for home page image and main elevator text -->
     <div class="row">
         <div class="col-sm-4 about-me">
-            <img src="images/Alisonreardon.jpg" class="img-fluid img-rounded" width = "100%" alt="Alison Reardon, Executive Coach">
+            <img src="images/Alisonreardon.jpg" class="img-fluid img-rounded" alt="Alison Reardon, Executive Coach">
         </div>
         <div class="col-8"> 
             <h2>Ali Reardon, Head Coach</h2>
