--- a/services.html
+++ b/services.html
@@ -164,8 +164,9 @@
             <img src="images/BritishPsylogo.jpg" class="img-rounded" alt="british psychology logo" width="80" height="80">
             </span>
         </div>
-    </div>
-    <script
+        </div>
+      </footer>
+    <script>
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"
