--- a/aboutme.html
+++ b/aboutme.html
@@ -68,8 +68,8 @@
 
            <!-- Footer section -->
 
-<footer class= "text-center">
-            
+<footer>
+          
             <div class="p-4 row">
                 <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
                   <div class="social-media-icons">
