--- a/contactus.html
+++ b/contactus.html
@@ -82,7 +82,7 @@ Please note, at this time we are only providing coaching online as per governmen
            <!-- Footer section -->
 
 
-           <footer class="text-center">
+           <footer>
             <div class="p-4 row">
               <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
                 <div class="social-media-icons">
