--- a/services.html
+++ b/services.html
@@ -144,7 +144,7 @@
     
 
     <!-- Footer section -->
-    <footer class="text-center">
+    <footer>
       <div class="p-4 row">
         <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
           <div class="social-media-icons">
@@ -165,7 +165,7 @@
             </span>
         </div>
         </div>
-      </footer>
+    </footer>
     <script>
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
