add 600px width to images on services page to remove white spaces

--- a/services.html
+++ b/services.html
@@ -65,6 +65,7 @@
             src="images/coachingsmall.jpg"
             class="rounded img-fluid"
             alt="executive coaching"
+            width = "600px"
           />
         </div>
         <div class="col-sm-6 col-md-6">
@@ -92,6 +93,7 @@
             src="images/groupsmall.jpg"
             class="rounded img-fluid"
             alt="group programme"
+            width = "600px"
           />
         </div>
         <div class="col-sm-6 col-md-6">
@@ -119,6 +121,7 @@
               src="images/Resiliencesmall.jpg"
               class="rounded img-fluid"
               alt="group coaching"
+              width = "600px"
             />
           </div>
           <div class="col-sm-6 col-md-6">
