--- a/index.html
+++ b/index.html
@@ -42,14 +42,13 @@
             <div class="container-fluid hero-home img-fluid">
                  <div class ="row">
                     <div class="col-md-8 col-lg-6 offset-md-4 offset-lg-6">
-                          <p class ="home-spacing"> We draw on business experience and psychological expertise to deliver powerful executive coaching programmes </p>
+                        <p class ="home-spacing"> We draw on business experience and psychological expertise to deliver powerful executive coaching programmes </p>
                     </div>
                 </div>
             </div>
 
 <!-- Container for 1 section: Home service section-->
-<div class="container-fluid text-center home-page-services">
-  
+<div class="container-fluid text-center home-page-services">  
     <!-- This row has three columns for the services sectons of the home-page --> 
     <div class="row mt-4 mb-4">
         <div class="col">
@@ -57,22 +56,21 @@
          <p>Medium to long term programmes</p>
          <a href="services.html#executive-coaching"><img src="images/coachingmedium.jpg" class="img-rounded img-fluid" alt="executive coaching">
         </a></div>
-        <div class="col">
+    <div class="col">
 	        <h2>Group Programmes</h2>
          <p>Team coaching and action-learning </p>
          <a href="services.html#group-programme"><img src="images/groupmedium.jpg" class="img-rounded img-fluid" alt="group coaching">
         </a></div>
-	   <div class="col">
+	  <div class="col">
 	        <h2>Resilience Coaching</h2>
         <p>Coaching through the Covid crisis</p>
         <a href="services.html#resilience"><img src="images/Resiliencemedium.jpg" class="img-rounded img-fluid" alt="resilience">
-        </a></div>
+        </a>
     </div>
+  </div>
 </div>
 
-           <!-- Footer section -->
-
-
+<!-- Footer section -->
 <footer>
   <div class="p-4 row">
     <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
@@ -95,8 +93,8 @@
     </div>
 </div>
 </footer>
-   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-  </body></html>
+</body></html>
