--- a/services.html
+++ b/services.html
@@ -65,7 +65,7 @@
             src="images/coachingsmall.jpg"
             class="rounded img-fluid"
             alt="executive coaching"
-            width = "600px"
+            width = "600"
           />
         </div>
         <div class="col-sm-6 col-md-6">
@@ -93,7 +93,7 @@
             src="images/groupsmall.jpg"
             class="rounded img-fluid"
             alt="group programme"
-            width = "600px"
+            width = "600"
           />
         </div>
         <div class="col-sm-6 col-md-6">
@@ -121,7 +121,7 @@
               src="images/Resiliencesmall.jpg"
               class="rounded img-fluid"
               alt="group coaching"
-              width = "600px"
+              width = "600"
             />
           </div>
           <div class="col-sm-6 col-md-6">
@@ -145,9 +145,7 @@
   </body>
 
     
-
-    <!-- Footer section -->
-    <footer>
+<footer>
       <div class="p-4 row">
         <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
           <div class="social-media-icons">
@@ -168,8 +166,8 @@
             </span>
         </div>
         </div>
-    </footer>
-    <script>
+</footer>    
+      <script>
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"
