simplify download pdf script

--- a/aboutme.html
+++ b/aboutme.html
@@ -107,8 +107,7 @@
             things differently by the end of the sessions.”
           </p>
           <br />
-          <a href="/documents/AliReardoncoachingBio2021.pdf" target="_blank"
-            ><i class="cv-download" aria-hidden="true"></i
+          <a href="/documents/AliReardoncoachingBio2021.pdf"
             ><span>Download Ali's Profile</span></a
           >
         </div>
