--- a/aboutme.html
+++ b/aboutme.html
@@ -107,7 +107,8 @@
             things differently by the end of the sessions.”
           </p>
           <br />
-          <a href="/documents/AliReardoncoachingBio2021.pdf"
+          <a
+            href="https://leliarkelly.github.io/CoachingPsychology/documents/AliReardoncoachingBio2021.pdf"
             ><span>Download Ali's Profile</span></a
           >
         </div>
